--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 
     implementation "org.apache.commons:commons-lang3:3.8.1"
     implementation "org.apache.commons:commons-collections4:4.2"
+    implementation "com.google.zxing:core:3.3.3"
+    implementation "me.dm7.barcodescanner:zxing:1.9.8"
 
 
     implementation 'com.android.support:support-v4:28.0.0'
