--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
 
     <application
         android:name=".util.MyApplication"
@@ -28,7 +30,8 @@
         <activity android:name=".WifiInfoActivity" />
         <activity android:name=".LogInActivity" />
         <activity android:name=".SignUpActivity" />
-        <activity android:name=".ChannelRatingActivity"></activity>
+        <activity android:name=".ChannelRatingActivity" />
+        <activity android:name=".QRCodeScanActivity"></activity>
     </application>
 
 </manifest>
