--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     implementation "org.apache.commons:commons-collections4:4.2"
     implementation "com.google.zxing:core:3.3.3"
     implementation "me.dm7.barcodescanner:zxing:1.9.8"
-    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
-    implementation 'com.google.code.gson:gson:2.7'
+    implementation("com.squareup.okhttp3:okhttp:3.12.0")
+    implementation 'com.google.code.gson:gson:2.8.2'
 
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
